--- a/finalyearprojects.html
+++ b/finalyearprojects.html
@@ -18,10 +18,56 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section>Final Year Projects</section>
-			<section>Source Control and Backup</section>
-			<section>References and Sources</section>
-			<section>Documentation</section>
+			<section id="TitleSlide">
+				<h3>Final Year Projects (FYP)</h3>
+				<p>By Mark Crowe</p>
+				<p>March, 2021</p>
+			</section>
+			<section id="FirstFYP">
+				<h3>(First) Final Year Projects (F)FYP</h3>
+				<p>Consider that for a typical student a FYP is their final large lone project and their first large lone project.</p>
+				<p>So given it is a student's first first large lone project, What can we learn from others?</p>
+			</section>
+			<section id="CommonDisasters">
+				<h3>Common Disasters</h3>
+				<ul>
+					<li>Work is lost or destroyed.</li>
+					<li>Biting off more than you can chew.</li>
+					<li>Software artifacts stop compiling or running after changes.</li>
+					<li>The report is neglected.</li>
+					<li>Unknown Unknowns.</li>
+				</ul>
+			</section>
+			<section id="FirstQuestion">
+				<h3>You think you're the first?</h3>
+			</section>
+			<section id="TheFirst">
+				<h3>Someone had to be the first</h3>
+			</section>
+			<section>
+				<h3>Source Control and Backup</h3>
+			</section>
+			<section>
+				<h3>References and Sources</h3>
+			</section>
+			<section>
+				<h3>Documentation</h3>
+				<ul>
+					<li>Microsoft Word</li>
+					<li>Adobe Pdf</li>
+					<li>Html</li>
+					<li>Markdown</li>
+				</ul>
+			</section>
+			<section>
+				<h3>Self Promotion</h3>
+				<ul>
+					<li>Microsoft Word</li>
+					<li>Adobe Pdf</li>
+					<li>Html</li>
+					<li>Markdown</li>
+				</ul>
+			</section>
 		</div>
 	</div>
 
