--- a/finalyearprojects.html
+++ b/finalyearprojects.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Mark Crowe">
-	<meta name="description" content="How to manage and succeed with your Final Year Project.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta charset="utf-8" />
+	<meta name="author" content="Mark Crowe" />
+	<meta name="description" content="How to manage and succeed with your Final Year Project." />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 	<title>Final Year Projects</title>
 
-	<link rel="stylesheet" href="reveal.js/dist/reset.css">
-	<link rel="stylesheet" href="reveal.js/dist/reveal.css">
-	<link rel="stylesheet" href="reveal.js/dist/theme/black.css" id="theme">
-	<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css" id="highlight-theme">
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="stylesheet" href="reveal.js/dist/reset.css" />
+	<link rel="stylesheet" href="reveal.js/dist/reveal.css" />
+	<link rel="stylesheet" href="reveal.js/dist/theme/black.css" id="theme" />
+	<link rel="stylesheet" href="reveal.js/plugin/highlight/monokai.css" id="highlight-theme" />
 </head>
 
 <body>
@@ -24,9 +25,9 @@
 				<p>March, 2021</p>
 			</section>
 			<section id="FirstFYP">
-				<h3>(First) Final Year Projects (F)FYP</h3>
-				<p>Consider that for a typical student a FYP is their final large lone project and their first large lone project.</p>
-				<p>So given it is a student's first first large lone project, What can we learn from others?</p>
+				<h3>(First) Final Year Project</h3>
+				<p>Consider that for a typical student the FYP is both their first and final large solo project.</p>
+				<p>So given it is a student's first large solo project, What can we learn from past students?</p>
 			</section>
 			<section id="CommonDisasters">
 				<h3>Common Disasters</h3>
@@ -44,19 +45,38 @@
 			<section id="TheFirst">
 				<h3>Someone had to be the first</h3>
 			</section>
-			<section>
+			<section id="SourceControl">
 				<h3>Source Control and Backup</h3>
+				<ul>
+					<li>GitHub.</li>
+					<li>GitLab.</li>
+					<li>Azure DevOps.</li>
+				</ul>
+			</section>
+			<section id="Planning">
+				<h3>Planning</h3>
 			</section>
 			<section>
 				<h3>References and Sources</h3>
 			</section>
-			<section>
+			<section id="Documentation">
 				<h3>Documentation</h3>
+				<h4>Reports</h4>
 				<ul>
-					<li>Microsoft Word</li>
-					<li>Adobe Pdf</li>
-					<li>Html</li>
-					<li>Markdown</li>
+					<li>Reports</li>
+					<ul>
+						<li>Microsoft Word</li>
+						<p>basics of word, outline view , references TOC & TOF</p>
+						<li>Adobe Pdf</li>
+						<li>Html</li>
+						<li>Markdown</li>
+					</ul>
+					<li>The Presentation</li>
+					<ul>
+						<li>Power Point</li>
+						<li>Adobe Pdf</li>
+						<li>Html/Reveal.js</li>
+					</ul>
 				</ul>
 			</section>
 			<section>
@@ -66,6 +86,21 @@
 					<li>Adobe Pdf</li>
 					<li>Html</li>
 					<li>Markdown</li>
+				</ul>
+			</section>
+			<section>
+				<h3>The Presentation</h3>
+				<ul>
+					<li>Power Point</li>
+					<li>Adobe Pdf</li>
+					<li>Html/Reveal.js</li>
+				</ul>
+			</section>
+			<section id="Help">
+				<h3>Help and Support.</h3>
+				<ul>
+					<li>Your Peers</li>
+					<li>The Learning Support Unit</li>
 				</ul>
 			</section>
 		</div>
