Use mouse wheel/ slide numbers

--- a/finalyearprojects.html
+++ b/finalyearprojects.html
@@ -127,6 +127,8 @@
 				{
 					hash: true,
 					plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
+					slideNumber: 'c/t',
+					mouseWheel: true,
 				}
 			);
 		</script>
