vertical align top

--- a/finalyearprojects.html
+++ b/finalyearprojects.html
@@ -121,6 +121,7 @@
 		<script>
 			Reveal.initialize(
 				{
+					center: false,
 					hash: true,
 					plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
 					slideNumber: 'c/t',
